--- a/movie.html
+++ b/movie.html
@@ -12,7 +12,16 @@
       <input type="text" id="search-bar" placeholder="Search Movie..." />
     </header>
     <main>
-      <section class="movie-container"></section>
+      <aside id="bookmarks">
+        <p>Bookmarks List</p>
+      </aside>
+      <section id="movie-section">
+        <article class="movie-container">
+          <button id="bookmark-button">
+            <p>Bookmark</p>
+          </button>
+        </article>
+      </section>
     </main>
   </body>
 </html>
