--- a/movie.html
+++ b/movie.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
+    <script type="module" src="app.js" defer></script>
   </head>
   <body>
     <header>
@@ -17,9 +17,9 @@
       </aside>
       <section id="movie-section">
         <article class="movie-container">
-          <button id="bookmark-button">
+          <!-- <button id="bookmark-button">
             <p>Bookmark</p>
-          </button>
+          </button> -->
         </article>
       </section>
     </main>
