--- a/movie.html
+++ b/movie.html
@@ -14,6 +14,7 @@
     <main>
       <aside id="bookmarks">
         <p>Bookmarks List</p>
+        <ul id="bookmarks-list"></ul>
       </aside>
       <section id="movie-section">
         <article class="movie-container">
