--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <script type="module" src="app.js" defer></script>
+    <link rel="stylesheet" href="src/style.css" />
+    <script type="module" src="src/app.js" defer></script>
   </head>
   <body>
     <header>
@@ -18,6 +18,7 @@
           placeholder="Search Movie..."
         />
         <input type="submit" id="submit" value="Search" />
+        <div id="live-search-dropdown"></div>
       </form>
     </header>
     <main>
