--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <option value="alpha-asc">A to Z</option>
             <option value="alpha-desc">Z to A</option>
           </select>
+          <button id="delete-bookmarks">Delete Bookmarks</button>
         </div>
         <ul id="bookmarks-list"></ul>
       </aside>
