--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><link rel=stylesheet href=Movie-Database.d842ae73.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Document</title><script type=module src=Movie-Database.01c9e364.js></script><body>
+<!DOCTYPE html><html lang=en><link rel=stylesheet href=Movie-Database.d842ae73.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Document</title><script type=module src=Movie-Database.1cb589c4.js></script><body>
     <header>
       <form id=nav-search-form>
         <input name=search-input autocomplete=off id=search-bar placeholder="Search Movie...">
@@ -17,6 +17,7 @@
             <option value=alpha-asc>A to Z</option>
             <option value=alpha-desc>Z to A</option>
           </select>
+          <button id=delete-bookmarks>Delete Bookmarks</button>
         </div>
         <ul id=bookmarks-list></ul>
       </aside>
