--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
           <div id="live-search-dropdown"></div>
           <div></div>
         </form>
-        <a href="">
-          <span class="label">Sign in</span>
-        </a>
+        <div id="main-nav">
+          <a class="label" href=""><span>Favorites</span></a>
+          <a class="label" href=""><span>Sign in</span></a>
+          <a class="label" href=""><span>Create Account</span></a>
+        </div>
       </header>
       <main>
         <aside id="bookmarks">
