--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=importmap>{"imports":{"8QvJ8":"./imagenotfound.38b509dc.jpg"}}</script><link rel=stylesheet href=Movie-Database.33225016.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Ruby Movies DB</title><script type=module src=Movie-Database.de0cfa21.js></script><body>
+<!DOCTYPE html><html lang=en><script type=importmap>{"imports":{"8QvJ8":"./imagenotfound.38b509dc.jpg"}}</script><link rel=stylesheet href=Movie-Database.055c0f5a.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Ruby Movies DB</title><script type=module src=Movie-Database.220881f1.js></script><body>
     <div id=wrapper>
       <header>
         <div id=header-bg></div>
@@ -11,9 +11,11 @@
           <div id=live-search-dropdown></div>
           <div></div>
         </form>
-        <a>
-          <span class=label>Sign in</span>
-        </a>
+        <div id=main-nav>
+          <a class=label><span>Favorites</span></a>
+          <a class=label><span>Sign in</span></a>
+          <a class=label><span>Create Account</span></a>
+        </div>
       </header>
       <main>
         <aside id=bookmarks>
