refactor(handleSearch) add promise all for livesearch nav

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
         <div id="header-bg"></div>
         <a id="home-name" href="#">
-          <h1>RubyMovies</h1>
+          <h1><span id="title-red">Ruby</span>Movies</h1>
         </a>
         <div id="search-wrapper">
           <form id="nav-search-form">
@@ -74,7 +74,8 @@
           <span id="min-pop-value">0</span>
           <ul id="bookmarks-list"></ul>
         </aside>
-        <article class="movie-container"></article>
+        <section class="movie-container">
+        </section>
       </main>
     </div>
   </body>
