deploy: e2db441bfa17f735e7c57eba12559a67da8d9953

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html><html lang=en><script type=importmap>{"imports":{"8QvJ8":"./imagenotfound.38b509dc.jpg"}}</script><link rel=stylesheet href=Movie-Database.3e349344.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Ruby Movies DB</title><script type=module src=Movie-Database.ae5daf71.js></script><body>
+<!DOCTYPE html><html lang=en><script type=importmap>{"imports":{"8QvJ8":"./imagenotfound.38b509dc.jpg"}}</script><link rel=stylesheet href=Movie-Database.809b8d88.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Ruby Movies DB</title><script type=module src=Movie-Database.0cc94fe8.js></script><body>
     <div id=wrapper>
       <header>
         <div id=header-bg></div>
         <a id=home-name href=#>
-          <h1>RubyMovies</h1>
+          <h1><span id=title-red>Ruby</span>Movies</h1>
         </a>
         <div id=search-wrapper>
           <form id=nav-search-form>
@@ -40,7 +40,8 @@
           <span id=min-pop-value>0</span>
           <ul id=bookmarks-list></ul>
         </aside>
-        <article class=movie-container></article>
+        <section class=movie-container>
+        </section>
       </main>
     </div>
   
