deploy: 4a3b4e2f47fc42e64e6cf759c4ed0d15c2701955

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=importmap>{"imports":{"8QvJ8":"./imagenotfound.38b509dc.jpg"}}</script><link rel=stylesheet href=Movie-Database.d077753f.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Ruby Movies DB</title><script type=module src=Movie-Database.0cc94fe8.js></script><body>
+<!DOCTYPE html><html lang=en><script type=importmap>{"imports":{"8QvJ8":"/imagenotfound.38b509dc.jpg"}}</script><link rel=stylesheet href=/Movie-Database.d077753f.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Ruby Movies DB</title><script type=module src=/Movie-Database.d953b11b.js></script><body>
     <div id=wrapper>
       <header>
         <nav class=header-content>
